🗂️ Reorganize project structure: scripts, html_apps, archived folders
- Created organized directory structure:
  - /scripts/veo_generation/ - Video generation tools
  - /scripts/clustering/ - Semantic clustering scripts
  - /scripts/stream_upload/ - Cloudflare Stream upload
  - /scripts/utilities/ - Helper scripts
  - /html_apps/ - All TV web applications
  - /archived/ - Outdated/one-time scripts

- Updated .gitignore for new structure
- Updated index.html redirect to new location
- Created PROJECT_ORGANIZATION.md guide
- Updated README.md with current project status

All scripts and apps now logically organized by function.

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,12 @@ Thumbs.db
 # Video files (large media)
 channels/
 channels_clustered/
+channels_reclustered_all/
 generated_videos/
 init/
+videos_combined_for_clustering/
+videos_combined_for_clustering_wrapped/
+new_videos_staging/
 *.mp4
 *.webm
 *.mov
@@ -43,10 +47,14 @@ video_embeddings_cache/
 .wrangler/
 wrangler-output/
 
-# Backups
+# Backups & Archives
 backup/
+archived/
 *.bak
 *.json.bak
+
+# Large result files
+stream_upload_results.json
 
 # IDE
 .vscode/
